# voice-of-ra

./: .pre-commit-config.yaml  README.md  constants.py  main.py  model.py  pyproject.toml  schema.py  utils.py
tests/: conftest.py  test_integration.py  test_property_based.py  test_scenario.py
tests/assets/campaigns/en/tic/: 0_campaign.txt  10_the_lair_of_dagon.txt  11_hidden_truths.txt  12_into_the_maelstrom.txt  13_tic_epilogue.txt  1_the_pit_of_despair.txt  2_puzzle_pieces.txt  3_the_vanishing_of_elina_harper.txt  4_the_syzygy.txt  5_in_too_deep.txt  6_devil_reef.txt  7_beneath_the_waves.txt  8_horror_in_high_gear.txt  9_a_light_in_the_fog.txt
tests/assets/campaigns/json/tic/: a_light_in_the_fog.json  campaign.json  devil_reef.json  horror_in_high_gear.json  in_too_deep.json  into_the_maelstrom.json  the_lair_of_dagon.json  the_pit_of_despair.json  the_vanishing_of_elina_harper.json
