[project]
name = "Voice of Ra"
requires-python = ">=3.12"
version = "0.1.0"
description = "Voice of Ra is a Python app that uses the ElevenLabs API to generate narration files for Arkham Horror: The Card Game campaigns."

[tool.poetry]
name = "Voice of Ra"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elevenlabs = "^1.3.1"
nicegui = "^1.4.26"
gql = { extras = ["all"], version = "^3.5.0" }
click = "^8.1.7"
pydantic = "^2.7.4"
jsonschema = "^4.22.0"
pytest = "^8.2.2"
hypothesis = "^6.104.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["A", "B", "C", "E", "EM", "W", "F", "N", "ANN", "ASYNC", "S", "BLE", "FBT", "DTZ", "ISC", "ICN", "PIE", "PYI", "Q", "RSE", "RET", "SLOT", "TCH", "PTH", "LOG", "RUF", "C4", "ISC", "UP", "RUF", "SIM", "I", "COM", "EXE", "ISC", "ICN", "LOG", "G", "INP", "PIE", "PYI", "PT", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "R", "W", "TRY", "FLY", "PERF", "FURB"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
#fix = true
#unsafe-fixes = true
#lint.extend-fixable = ["B"]
#lint.preview = true
ignore = ["ISC001", "COM812"]
# Enumerate all fixed violations.
#show-fixes = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    # Allow Pydantic's `@validator` decorator to trigger class method treatment.
    "pydantic.validator",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 100

# Assume Python 3.12
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
# ...
venvPath = "."
venv = ".venv"
ignoreRules = [
    "reportIncompatibleVariableOverride",
]